--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-
-
 *{
     margin: 0;
     padding: 0;
@@ -39,12 +37,22 @@ body {
     justify-content: space-between;
     align-items: center;
     z-index: 100;
+    transition: .3s;
+}
+
+.header.sticky {
+    background: var(--bg-color);
 }
 
 .logo {
+    position: relative;
     font-size: 2.5rem;
     color: var(--text-color);
     font-weight: 600;
+}
+
+.navbar {
+    position: relative;
 }
 
 .navbar a {
@@ -61,6 +69,7 @@ body {
 }
 
 #menu-icon {
+    position: relative;
     font-size: 3.6rem;
     color: var(--text-color);
     cursor: pointer;
@@ -84,17 +93,24 @@ section {
 
 .home-content {
     max-width: 55rem;
+    z-index: 99;
 }
 
 .home-content h1 {
+    position: relative;
+    display: inline-block;
     font-size: 5.6rem;
     font-weight: 700;
     line-height: 1.3;
 }
 
+.home-content h1 span {
+    color: var(--text-color);
+}
+
 .home-content .text-animate {
     position: relative;
-    width: 52.8rem;
+    width: 46.8rem;
 }
 
 .home-content .text-animate h3 {
@@ -102,9 +118,29 @@ section {
     font-weight: 700;
     color: transparent;
     -webkit-text-stroke: 1px var(--main-color);
+    background-image: linear-gradient(var(--main-color), var(--main-color));
+    background-repeat: no-repeat;
+    -webkit-background-clip: text;
+    background-position: 0 0;
+    animation: homeBgText 4s linear infinite;
+    animation-delay: 1s;
+}
+
+.home-content .text-animate h3::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 0;
+    height: 100%;
+    border-right: 2px solid var(--main-color);
+    z-index: -1;
+    animation: homeCursorText 4s linear infinite;
+    animation-delay: 1s;
 }
 
 .home-content p {
+    position: relative; 
     font-size: 1.6rem;
     margin: 3rem 0 4rem;
 }
@@ -240,6 +276,7 @@ section {
 }
 
 .heading {
+    position: relative;
     font-size: 6rem;
     margin-bottom: 4rem;
     text-align: center;
@@ -280,7 +317,8 @@ span {
     border-top: .2rem solid var(--second-bg-color);
     border-bottom: .2rem solid var(--second-bg-color);
     border-left: .2rem solid var(--main-color);
-    border-right: .2rem solid var(--main-color);        
+    border-right: .2rem solid var(--main-color);
+    animation: aboutSpinner 8s linear infinite;       
 }
 
 .about-content {
@@ -382,4 +420,469 @@ span {
 
  .education-content .content .year h3 {
     font-size: 2rem;
+ }
+
+ .skills {
+    min-height: auto;
+    padding-bottom: 7rem;
+    background: var(--second-bg-color);
+ }
+
+ .skills .skills-row {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 7rem;
+ }
+
+ .skills-row .skills-column {
+    flex: 1 1 40rem;
+ }
+
+ .skills-column .title {
+    font-size: 2.5rem;
+    margin: 0 0 1.5rem;
+ }
+
+ .skills-box .skills-content {
+    position: relative;
+    border: .2rem solid var(--main-color);
+    border-radius: .6rem;
+    padding: 1.5rem 2.5rem;
+    z-index: 1;
+    overflow: hidden;
+ }
+
+ .skills-box .skills-content::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 0;
+    height: 100%;
+    background: var(--bg-color);
+    z-index: -1;
+    transition: .6s;
+ }
+
+ .skills-box .skills-content:hover::before {
+    width: 100%;
+ }
+
+ .skills-content .progress {
+    padding: 1rem 0;
+ }
+
+ .skills-content .progress h3 {
+    font-size: 1.7em;
+    display: flex;
+    justify-content: space-between;
+ }
+
+ .skills-content .progress h3 span {
+    color: var(--text-color);
+ }
+
+ .skills-content .progress .bar {
+    height: 3rem;
+    border-radius: .6rem;
+    border: .3rem solid var(--main-color);
+    padding: .5rem;
+    margin: 1rem 0;
+ }
+
+ .skills-content .progress .bar span {
+    display: block;
+    height: 100%;
+    border-radius: .3rem;
+    background: var(--main-color);
+
+ }
+
+    .skills-column:nth-child(1) .skills-content .progress:nth-child(1) .bar span {
+        width: 90%;
+    }
+
+    .skills-column:nth-child(1) .skills-content .progress:nth-child(2) .bar span {
+        width: 80%;
+    }
+
+    .skills-column:nth-child(1) .skills-content .progress:nth-child(3) .bar span {
+        width: 5%;
+    }
+
+    .skills-column:nth-child(1) .skills-content .progress:nth-child(4) .bar span {
+        width: 1%;
+    }
+
+    .skills-column:nth-child(2) .skills-content .progress:nth-child(1) .bar span {
+        width: 95%;
+    }
+
+    .skills-column:nth-child(2) .skills-content .progress:nth-child(2) .bar span {
+        width: 67%;
+    }
+
+    .skills-column:nth-child(2) .skills-content .progress:nth-child(3) .bar span {
+        width: 85%;
+    }
+
+    .skills-column:nth-child(2) .skills-content .progress:nth-child(4) .bar span {
+        width: 50%;
+    }
+
+ .contact {
+    min-height: auto;
+    padding-bottom: 7rem;
+ }
+
+ .contact form {
+    max-width: 70rem;
+    margin: 0 auto;
+    text-align: center;
+ }
+
+ .contact form .input-box {
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+ }
+
+ .contact form .input-box .input-field {
+    position: relative;
+    width: 49%;
+    margin: .8rem 0;
+ }
+
+ .contact form .input-box .input-field input, 
+ .contact form .textarea-field textarea {
+    width: 100%;
+    height: 100%;
+    padding: 1.5rem;
+    font-size: 1.6rem;
+    color: var(--text-color);
+    background: transparent;
+    border-radius: .6rem;
+    border: .2rem solid var(--main-color);
+ }
+
+ .contact form .input-box .input-field input::placeholder, 
+ .contact form .textarea-field textarea::placeholder {
+    color: var(--text-color);
+ }
+
+ .contact form .focus {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 0;
+    background: var(--second-bg-color);
+    border-radius: .6rem;
+    z-index: -1;
+    transition: .6s;
+ }
+
+ .contact form .input-box .input-field input:focus~.focus,
+ .contact form .input-box .input-field input:valid~.focus,
+ .contact form .textarea-field textarea:focus~.focus,
+ .contact form .textarea-field textarea:valid~.focus  {
+    height: 100%;
+ }
+
+ .contact form .textarea-field {
+    position: relative;
+    margin: .8rem 0 2.7rem;
+    display: flex;
+ }
+
+ .contact form .textarea-field textarea {
+    resize: none;
+ }
+
+ .contact form .btn-box.btns .btn {
+    cursor: pointer;
+ }
+
+ .footer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+    padding: 2rem 9%;
+    background: var(--second-bg-color);
+ }
+
+ .footer-text p {
+    font-size: 1.4rem;
+ }
+
+ .footer-iconTop a {
+    position: relative;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    padding: .8rem;
+    background: var(--main-color);
+    border: .2rem solid var(--main-color);
+    border-radius: .6rem;
+    z-index: 1;
+    overflow: hidden;
+ }
+
+ .footer-iconTop a::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 0;
+    height: 100%;
+    background: var(--second-bg-color);
+    z-index: -1;
+    transition: .6s;
+ }
+
+ .footer-iconTop a:hover::before {
+    width: 100%;
+ }
+
+ .footer-iconTop a i {
+    font-size: 2.4rem;
+    color: var(--bg-color);
+    transition: .3s;
+ }
+
+ .footer-iconTop a:hover i {
+    color: var(--main-color);
+ }
+
+/* ANIMATION RELOAD AND SCROLL */
+
+.animate {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    background: purple;
+    z-index: 98;
+}
+
+.animate.home-img {
+    width: 50%;
+}
+
+.logo .animate,
+.navbar .animate,
+#menu-icon .animate,
+.home.show-animate .animate {
+    animation: showRight 1s ease forwards;
+    animation-delay: calc(.3s * var(--i));
+}
+
+.animate.scroll {
+    transform: 1s ease;
+    transition-delay: calc(.3s / var(--i));
+}
+
+.about.home.show-animate .animate.scroll {
+    transition-delay: calc(.3s * var(--i));
+    width: 0;
+}
+
+
+ /* BREAKPOINTS */
+
+ @media (max-width: 1200px) {
+    html {
+        font-size: 55%;
+    }
+ }
+
+ @media (max-width: 1200px) {
+    .header {
+        padding: 2rem 4%;
+    }
+
+    section {
+        padding: 10rem 4% 2rem;
+    }
+
+    .home {
+        padding: 0 4%;
+    }
+
+    .footer {
+        padding: 2rem 4%;
+    }
+ }
+
+ @media (max-width: 970px) {
+    .header {
+        background: var(--bg-color);
+    }
+
+    #menu-icon {
+        display: block;
+    }
+
+    .navbar {
+        position: absolute;
+        top: 100%;
+        left: -100%;
+        width: 100%;
+        padding: 1rem 4%;
+        background: var(--main-color);
+        box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .2);
+        z-index: 1;
+        transition: .25s ease;
+        transition-delay: .26s;
+    }
+
+    .navbar.active {
+        transition-delay: 0s;
+        left: 0;
+    }
+
+    .navbar .active-nav {
+        position: absolute;
+        top: 0;
+        left: -100%;
+        width: 100%;
+        height: 100%;
+        background: var(--bg-color);
+        border-top: .1rem solid rgba(0, 0, 0, .2);
+        z-index: -1;
+        transition: .25s ease;
+        transition-delay: 0s;
+    }
+
+    .navbar.active .active-nav {
+        transition-delay: .25s ease;
+        left: 0;
+    }
+
+    .navbar a {
+        display: block;
+        font-size: 2rem;
+        margin: 3rem 0;
+        transform: translateX(-20rem);
+        transition: .25s ease;
+        transition-delay: 0s;
+    }
+
+    .navbar.active a {
+        transform: translateX(0);
+        transition-delay: .25s;
+    }
+
+    .home-imgHover {
+      pointer-events: none;
+      background: var(--bg-color);
+      opacity: .6;
+    }
+ }
+
+ @media (max-width: 930px) {
+    html {
+        font-size: 50%;
+    }
+
+    .home-content h1 {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .home-sci {
+        width: 160px;
+    }
+
+    .home-sci a {
+        width: 38px;
+        height: 38px;
+    }
+ }
+
+ @media (max-width: 500px) {
+    .home-content h1 {
+        font-size: 5.2rem;
+    }
+
+    .education {
+        padding: 10rem 4% 5rem 5%;
+    }
+
+    .contact form .input-box .input-field {
+        width: 100%;
+    }
+
+    .footer {
+        flex-direction: column-reverse;
+    }
+
+    .footer p {
+        margin-top: 2rem;
+    }
+ }
+
+ @media (max-width: 500px) {
+    .home {
+        justify-content: center;
+    }
+
+    .home-content {
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        text-align: center;
+    }
+
+    .home-content h1 {
+        font-size: 5rem;
+    }
+ }
+
+ /* KEYFRAMES ANIMATION */
+
+ @keyframes homeCursorText {
+    0%,
+    10%,
+    100% {
+        width: 0;
+    }
+    65%,
+    70%,
+    85% {
+        width: 100%;
+        opacity: 1;
+    }
+
+    75%,
+    81% {
+        opacity: 0;
+    }
+ }
+
+ @keyframes homeBgText {
+    0%,
+    10%,
+    100% {
+        background-position: -47rem 0;
+    }
+    65%,
+    85% {
+        background-position: 0 0;
+    }
+ }
+
+ @keyframes aboutSpinner {
+    100% {
+        transform: translate(-50%, -50%) rotate(360deg);
+    }
+ }
+
+ @keyframes showRight {
+      100% {
+        width: 0;
+      }
  }
