--- a/style.css
+++ b/style.css
@@ -45,14 +45,9 @@ body {
 }
 
 .logo {
-    position: relative;
     font-size: 2.5rem;
     color: var(--text-color);
     font-weight: 600;
-}
-
-.navbar {
-    position: relative;
 }
 
 .navbar a {
@@ -69,7 +64,6 @@ body {
 }
 
 #menu-icon {
-    position: relative;
     font-size: 3.6rem;
     color: var(--text-color);
     cursor: pointer;
@@ -120,8 +114,7 @@ section {
     -webkit-text-stroke: 1px var(--main-color);
     background-image: linear-gradient(var(--main-color), var(--main-color));
     background-repeat: no-repeat;
-    -webkit-background-clip: text;
-    background-position: 0 0;
+    background-position: -33rem 0;
     animation: homeBgText 4s linear infinite;
     animation-delay: 1s;
 }
@@ -140,7 +133,6 @@ section {
 }
 
 .home-content p {
-    position: relative; 
     font-size: 1.6rem;
     margin: 3rem 0 4rem;
 }
@@ -276,7 +268,6 @@ section {
 }
 
 .heading {
-    position: relative;
     font-size: 6rem;
     margin-bottom: 4rem;
     text-align: center;
@@ -656,32 +647,7 @@ span {
     color: var(--main-color);
  }
 
-/* ANIMATION RELOAD AND SCROLL */
-
-.animate {
-    position: absolute;
-    top: 0;
-    right: 0;
-    width: 100%;
-    height: 100%;
-    background: purple;
-    z-index: 98;
-}
-
-.animate.home-img {
-    width: 50%;
-}
-
-.logo .animate,
-.navbar .animate,
-#menu-icon .animate,
-.home.show-animate .animate {
-    animation: showRight 1s ease forwards;
-    animation-delay: calc(.3s * var(--i));
-}
-
  /* BREAKPOINTS */
-
  @media (max-width: 1200px) {
     html {
         font-size: 55%;
@@ -832,7 +798,6 @@ span {
  }
 
  /* KEYFRAMES ANIMATION */
-
  @keyframes homeCursorText {
     0%,
     10%,
@@ -868,10 +833,4 @@ span {
     100% {
         transform: translate(-50%, -50%) rotate(360deg);
     }
- }
-
- @keyframes showRight {
-      100% {
-        width: 0;
-      }
  }
